# dec_ansi_parser

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dec_ansi_parser.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/dec_ansi_parser/: __init__.py  formatter.py  parser.py  script_reader.py
tests/: test_parser.py
