[tool.poetry]
name = "dec_ansi_parser"
version = "0.2.0"
description = "Terminal control sequence parser"
authors = ["yut23"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.scripts]
dec_ansi_parser = 'dec_ansi_parser.formatter:main'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
